# api_structure

./: Cargo.toml  README.md
src/: error.rs  fonts.rs  home.rs  image.rs  info.rs  lib.rs  reader.rs  scrape.rs  scraper.rs  search.rs
src/auth/: activate.rs  jwt.rs  login.rs  mod.rs  register.rs  reset_password.rs  role.rs
