[package]
name = "api_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }