[package]
name = "api_structure"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = {workspace = true}
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
